--- a/man/colorls.1
+++ b/man/colorls.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "COLORLS" "1" "January 2018" "colorls 1.1.1" "colorls Manual"
+.TH "COLORLS" "1" "July 2018" "colorls 1.1.1" "colorls Manual"
 .
 .SH "NAME"
 \fBcolorls\fR \- list directory contents with colors and icons
@@ -97,6 +97,10 @@ use light color scheme
 .TP
 \fB\-\-dark\fR
 use dark color scheme
+.
+.TP
+\fB\-\-hyperlink\fR:
+
 .
 .TP
 \fB\-h\fR, \fB\-\-help\fR
