Add `--color` option
This option works the same as for GNU ls, although if not specified colorization
is on by default (the `auto` mode).

Using `--color` is equivalent to `--color=always`.

--- a/man/colorls.1
+++ b/man/colorls.1
@@ -91,6 +91,10 @@ sort by WORD instead of name: none, size (\-S), time (\-t), extension (\-X)
 reverse order while sorting
 .
 .TP
+\fB\-\-color\fR
+colorize the output: auto, always (default if omitted), never
+.
+.TP
 \fB\-\-light\fR
 use light color scheme
 .
