Add `--format` and `-x` options
Both are also supported by GNU ls, although currently not all formats are
supported.

This change lays ground for implementing column based formatting and also
supports using a pager with colorls keeping the formatting intact:

`colorls --color -x | less --tabs=4 -RFX`

--- a/man/colorls.1
+++ b/man/colorls.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "COLORLS" "1" "August 2018" "colorls 1.1.1" "colorls Manual"
+.TH "COLORLS" "1" "October 2018" "colorls 1.1.1" "colorls Manual"
 .
 .SH "NAME"
 \fBcolorls\fR \- list directory contents with colors and icons
@@ -31,22 +31,6 @@ do not ignore entries starting with \.
 do not list \. and \.\.
 .
 .TP
-\fB\-l\fR, \fB\-\-long\fR
-use a long listing format
-.
-.TP
-\fB\-\-tree\fR
-shows tree view of the directory
-.
-.TP
-\fB\-\-report\fR
-show brief report
-.
-.TP
-\fB\-1\fR
-list one file per line
-.
-.TP
 \fB\-d\fR, \fB\-\-dirs\fR
 show only directories
 .
@@ -57,6 +41,30 @@ show only files
 .TP
 \fB\-\-gs\fR, \fB\-\-git\-status\fR
 show git status for each file
+.
+.TP
+\fB\-\-report\fR
+show brief report
+.
+.TP
+\fB\-\-format\fR
+use format: accross (\-x), horizontal (\-x), long (\-l), single\-column (\-1)
+.
+.TP
+\fB\-1\fR
+list one file per line
+.
+.TP
+\fB\-l\fR, \fB\-\-long\fR
+use a long listing format
+.
+.TP
+\fB\-\-tree\fR
+shows tree view of the directory
+.
+.TP
+\fB\-x\fR
+list entries by lines instead of by columns
 .
 .TP
 \fB\-\-sd\fR, \fB\-\-sort\-dirs\fR, \fB\-\-group\-directories\-first\fR
