Fix typo accross => across

--- a/man/colorls.1
+++ b/man/colorls.1
@@ -48,7 +48,7 @@ show brief report
 .
 .TP
 \fB\-\-format\fR
-use format: accross (\-x), horizontal (\-x), long (\-l), single\-column (\-1)
+use format: across (\-x), horizontal (\-x), long (\-l), single\-column (\-1)
 .
 .TP
 \fB\-1\fR
