--- a/man/colorls.1
+++ b/man/colorls.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "COLORLS" "1" "March 2019" "colorls 1.2.0" "colorls Manual"
+.TH "COLORLS" "1" "July 2019" "colorls 1.2.0" "colorls Manual"
 .
 .SH "NAME"
 \fBcolorls\fR \- list directory contents with colors and icons
@@ -48,7 +48,7 @@ show brief report
 .
 .TP
 \fB\-\-format\fR
-use format: across (\-x), horizontal (\-x), long (\-l), single\-column (\-1)
+use format: across (\-x), horizontal (\-x), long (\-l), single\-column (\-1), vertical (\-C)
 .
 .TP
 \fB\-1\fR
@@ -59,12 +59,16 @@ list one file per line
 use a long listing format
 .
 .TP
+\fB\-\-tree\fR
+shows tree view of the directory
+.
+.TP
 \fB\-x\fR
 list entries by lines instead of by columns
 .
 .TP
-\fB\-\-tree\fR
-shows tree view of the directory
+\fB\-C\fR
+list entries by columns instead of by lines
 .
 .TP
 \fB\-\-sd\fR, \fB\-\-sort\-dirs\fR, \fB\-\-group\-directories\-first\fR
