Add the option to handle depth for the tree flag

--- a/man/colorls.1
+++ b/man/colorls.1
@@ -59,12 +59,12 @@ list one file per line
 use a long listing format
 .
 .TP
-\fB\-\-tree\fR
-shows tree view of the directory
-.
-.TP
 \fB\-x\fR
 list entries by lines instead of by columns
+.
+.TP
+\fB\-\-tree\fR
+shows tree view of the directory (default depth 3)
 .
 .TP
 \fB\-\-sd\fR, \fB\-\-sort\-dirs\fR, \fB\-\-group\-directories\-first\fR
