--- a/man/colorls.1
+++ b/man/colorls.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "COLORLS" "1" "October 2018" "colorls 1.1.1" "colorls Manual"
+.TH "COLORLS" "1" "January 2019" "colorls 1.1.1" "colorls Manual"
 .
 .SH "NAME"
 \fBcolorls\fR \- list directory contents with colors and icons
@@ -64,7 +64,7 @@ list entries by lines instead of by columns
 .
 .TP
 \fB\-\-tree\fR
-shows tree view of the directory (default depth 3)
+shows tree view of the directory
 .
 .TP
 \fB\-\-sd\fR, \fB\-\-sort\-dirs\fR, \fB\-\-group\-directories\-first\fR
