Fix spec failures due to calling exit

--- a/man/colorls.1
+++ b/man/colorls.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "COLORLS" "1" "January 2019" "colorls 1.1.1" "colorls Manual"
+.TH "COLORLS" "1" "March 2019" "colorls 1.1.1" "colorls Manual"
 .
 .SH "NAME"
 \fBcolorls\fR \- list directory contents with colors and icons
@@ -97,6 +97,10 @@ sort by WORD instead of name: none, size (\-S), time (\-t), extension (\-X)
 .TP
 \fB\-r\fR, \fB\-\-reverse\fR
 reverse order while sorting
+.
+.TP
+\fB\-h\fR, \fB\-\-human\-readable\fR:
+
 .
 .TP
 \fB\-\-color\fR
