add -o and -g options.

--- a/man/colorls.1
+++ b/man/colorls.1
@@ -1,7 +1,7 @@
 .\" generated with Ronn/v0.7.3
 .\" http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH "COLORLS" "1" "October 2020" "colorls 1.4.2" "colorls Manual"
+.TH "COLORLS" "1" "November 2020" "colorls 1.4.2" "colorls Manual"
 .
 .SH "NAME"
 \fBcolorls\fR \- list directory contents with colors and icons
@@ -55,10 +55,6 @@ use format: across (\-x), horizontal (\-x), long (\-l), single\-column (\-1), ve
 list one file per line
 .
 .TP
-\fB\-l\fR, \fB\-\-long\fR
-use a long listing format
-.
-.TP
 \fB\-\-tree\fR
 shows tree view of the directory
 .
@@ -69,6 +65,18 @@ list entries by lines instead of by columns
 .TP
 \fB\-C\fR
 list entries by columns instead of by lines
+.
+.TP
+\fB\-l\fR, \fB\-\-long\fR
+use a long listing format
+.
+.TP
+\fB\-o\fR
+use a long listing format without group information
+.
+.TP
+\fB\-g\fR
+use a long listing format without owner information
 .
 .TP
 \fB\-\-sd\fR, \fB\-\-sort\-dirs\fR, \fB\-\-group\-directories\-first\fR
