--- a/man/colorls.1
+++ b/man/colorls.1
@@ -79,6 +79,10 @@ use a long listing format without group information
 use a long listing format without owner information
 .
 .TP
+\fB\-G\fR, \fB\-\-no\-group\fR
+show no group information in a long listing
+.
+.TP
 \fB\-\-sd\fR, \fB\-\-sort\-dirs\fR, \fB\-\-group\-directories\-first\fR
 sort directories first
 .
